# Mini-Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  color.cpp  color.h  helper.cpp  helper.h  lambertian.cpp  lambertian.h  main.cpp  metal.cpp  metal.h  object3d.cpp  object3d.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  sphere.cpp  sphere.h  tuple3f.cpp  tuple3f.h  util.cpp  util.h  vector.h  vector3d.cpp  vector3d.h
cli/: factory.h  main.cpp
cli/sources/: factory.cpp
data_structures/: bvh.h
data_structures/sources/: bvh.cpp
geometry/: camera.h  color.h  ray.h  tuple3f.h  vector3d.h
geometry/sources/: camera.cpp  color.cpp  ray.cpp  tuple3f.cpp  vector3d.cpp
materials/: dielectric.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h
materials/sources/: dielectric.cpp  lambertian.cpp  metal.cpp
runtime/: object3d.h  raytracer.h
runtime/sources/: object3d.cpp  raytracer.cpp
shapes/: aabb.h  sphere.cpp  sphere.h
shapes/sources/: aabb.cpp  sphere.cpp
util/: util.h
util/sources/: util.cpp
